ecmascript/parser/tests/test262-error-references/fail/d4e259842c4520e1.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/d4e259842c4520e1.js:1:6
  |
1 | 1 + (
  |      ^

error: Expected RParen
 --> $DIR/tests/test262-parser/fail/d4e259842c4520e1.js:1:5
  |
1 | 1 + (
  |     ^

